security_groups.tf
resource "aws_security_group" "public_sg" {
	vpc_id	=aws_vpc.main.id

	ingress	{
		from_port	=80
		to_port		=80
		protocol	="tcp"
		cidr_blocks	=["0.0.0.0/0"]
	}

	egress	{
		from_port	=0
		to_port		=0
		protocol	="-1"
		cidr_blocks	=["0.0.0.0/0"]
	}
}

resource "aws_security_group" "private_sg"	{
	vpc_id	=aws_vpc.main.id

	ingress	{
		from_port	=65000
		to_port		=65000
		protocol	="tcp"
		security_groups	=[aws_security_group.public_sg.id]
	}

	egress	{
		from_port	=0
		to_port		=0
		protocol	="-1"
		cidr_blocks	=[]
	}
}
